kubernetes/catalog/homeassistant/manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: baseline
    infraweaver.io/source: community-apps
